charts/templates/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    dev.okteto.com/last-updated: 2024-11-04T20:35:52
    dev.okteto.com/name: frontend
    dev.okteto.com/repository: https://github.com/jvc5546/test-node-delay.git
  labels:
    dev.okteto.com/deployed-by: test-node-delay
    stack.okteto.com/name: test-node-delay
    stack.okteto.com/service: frontend
  name: frontend
  namespace: okteto-admin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      stack.okteto.com/name: test-node-delay
      stack.okteto.com/service: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        dev.okteto.com/deployed-by: test-node-delay
        stack.okteto.com/name: test-node-delay
        stack.okteto.com/service: frontend
    spec:
      containers:
      - args:
        - npm
        - start
        image: registry.jona.okteto.me/okteto-admin/test-node-delay-frontend@sha256:3db39fc73e5a55081a8c1b9290656610f87c19e6eca116a4866bb659a0821870
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - containerPort: 3000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        workingDir: /usr/src/app
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 0
