charts/templates/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    dev.okteto.com/deployed-by: test-node-delay
    stack.okteto.com/name: test-node-delay
    stack.okteto.com/service: frontend
  name: frontend
  namespace: okteto-admin
spec:
  clusterIP: 34.118.229.116
  clusterIPs:
  - 34.118.229.116
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: p-3000-3000-tcp
    port: 3000
  selector:
    stack.okteto.com/name: test-node-delay
    stack.okteto.com/service: frontend
